re PR c++/7982 (core dump due to recursive definition (using stl set))

PR c++/7982
	* decl.c (warn_about_implicit_typename_lookup): Handle TYPEOF_TYPE.

	* g++.dg/warn/implicit-typename1.C: New test.

From-SVN: r63320